@@ -10,18 +10,18 @@ public class FileServiceImpl implements FileService {
     @Override
     public List<String> readFile(String data) {
         try {
-            return Files.readAllLines(Paths.get(data));
+            return Files.readAllLines(Path.of(data));
         } catch (IOException e) {
             throw new RuntimeException("Can not read from file " + data, e);
         }
     }
 
     @Override
-    public void writeToFile(String data, String file) {
+    public void writeToFile(String fileName, String data) {
         try {
-            Files.writeString(Path.of(file), data);
+            Files.writeString(Path.of(fileName), data);
         } catch (IOException e) {
-            throw new RuntimeException("Can not write data to file " + file, e);
+            throw new RuntimeException("Can not write data to file " + fileName, e);
         }
     }
 }
